--- a/Debug.Yocuki/YOCUKITop.exe.Config
+++ b/Debug.Yocuki/YOCUKITop.exe.Config
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="IsShowWelcome" value="1" />
-    <add key="IsOpenSudokuTabs" value="0" />
-    <add key="MusicVolum" value="7" />
-    <add key="SoundVolum" value="8" />
-    <add key="IsMute" value="0" />
+    <add key="IsShowWelcome" value="1"/>
+    <add key="IsOpenSudokuTabs" value="1"/>
+    <add key="MusicVolum" value="50"/>
+    <add key="SoundVolum" value="50"/>
+    <add key="IsMute" value="0"/>
   </appSettings>
 </configuration>
